# f8c

./: README.rst  pyproject.toml
f8c/: cli.py
tests/: test_f8c.py
