[tool.poetry]
name = "f8c"
version = "0.1.2"
description = "cli wrapper around flake8_codes"
authors = ["Ryan Delaney <ryan.patrick.delaney@protonmail.com>"]
readme = "README.rst"
repository = "https://github.com/rpdelaney/f8c"
homepage = "https://pypi.org/project/f8c"

[tool.poetry.scripts]
f8c = "f8c.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
flake8-codes = "^0.1.1"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
flake8 = "^4.0.1"
flake8-bugbear = "^21.11.29"
flake8-simplify = "^0.14.5"
flake8-comprehensions = "^3.8.0"
mypy = "^0.931"

[tool.poetry.dev-dependencies.isort]
version = "^5.10.1"
extras = [ "pyproject",]

[tool.pytest.ini_options]
console_output_style = "progress"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--doctest-modules"
]
filterwarnings = ["error"]
xfail_strict = true

[tool.black]
line-length = 79
target_version = [ "py310",]

[tool.isort]
combine_star = true
indent = "    "
length_sort = false
line_length = 79
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
